# NfcCpp

./: .gitignore  .gitmodules  BUILD_FLOW.md  CMAKE_STRUCTURE.md  CMakeLists.txt  NfcCpp_ClassDiagram.drawio  QUICKSTART.md  README.md  TESTING.md  commandset.txt  out.txt
Docs/: .$DesfireApp.drawio.bkp  ClassHierarchy_Full.mmd  ClassHierarchy_Relationships.mmd  Command-Architecture.md  Desfire-Authentication-Implementation.md  Desfire-Authentication.md  Desfire-Des-Authentication.md  DesfireApp.drawio  DesfireApp.drawio.xml  DesfireLegacyAuthenticateRestrictions.md  Sleep-Delay-Comparison.md  (+31 more)
Src/: CMakeLists.txt
Src/Comms/: CMakeLists.txt
Src/Comms/Serial/: CMakeLists.txt  SerialBusWin.cpp
Src/Nfc/: CMakeLists.txt
Src/Nfc/Card/: CMakeLists.txt  CardInfo.cpp  CardManager.cpp  CardSession.cpp  DesfireCard.cpp  ReaderCapabilities.cpp
Src/Nfc/Desfire/: CMakeLists.txt  DesfireCard.cpp  EncPipe.cpp  MacPipe.cpp  PlainPipe.cpp  SecureMessagingPolicy.cpp
Src/Nfc/Desfire/Commands/: AuthenticateCommand.cpp  ChangeFileSettingsCommand.cpp  ChangeKeyCommand.cpp  ChangeKeySettingsCommand.cpp  ClearRecordFileCommand.cpp  CommitTransactionCommand.cpp  CreateApplicationCommand.cpp  CreateBackupDataFileCommand.cpp  CreateCyclicRecordFileCommand.cpp  CreateLinearRecordFileCommand.cpp  CreateStdDataFileCommand.cpp  CreateValueFileCommand.cpp  CreditCommand.cpp  DebitCommand.cpp  DeleteApplicationCommand.cpp  DeleteFileCommand.cpp  FormatPiccCommand.cpp  FreeMemoryCommand.cpp  GetApplicationIdsCommand.cpp  GetCardUidCommand.cpp  GetFileIdsCommand.cpp  GetFileSettingsCommand.cpp  GetKeySettingsCommand.cpp  GetKeyVersionCommand.cpp  GetValueCommand.cpp  GetVersionCommand.cpp  LimitedCreditCommand.cpp  ReadDataCommand.cpp  ReadRecordsCommand.cpp  SelectApplicationCommand.cpp  SetConfigurationCommand.cpp  WriteDataCommand.cpp  WriteRecordCommand.cpp  changekey_command.cpp
Src/Nfc/Desfire/Detail/: ValueOperationCryptoUtils.h
Src/Nfc/Wire/: CMakeLists.txt  IsoWire.cpp  NativeWire.cpp
Src/Pn532/: CMakeLists.txt  CommandRequest.cpp  CommandResponse.cpp  Pn532ApduAdapter.cpp  Pn532Driver.cpp  Pn532RequestFrame.cpp  Pn532ResponseFrame.cpp
Src/Pn532/Commands/: GetFirmwareVersion.cpp  GetGeneralStatus.cpp  InDataExchange.cpp  InListPassiveTarget.cpp  PerformSelfTest.cpp  RFConfiguration.cpp  SAMConfiguration.cpp  SetSerialBaudRate.cpp
Src/Rc522/: CMakeLists.txt  Rc522ApduAdapter.cpp  Rc522Driver.cpp
Src/Utils/: CMakeLists.txt  DesfireCrypto.cpp  TimingEmbedded.cpp
examples/: CMakeLists.txt  README.md
examples/basic_pn532/: CMakeLists.txt  main.cpp
examples/basic_setup_example/: CMakeLists.txt  main.cpp
examples/card_detection/: CMakeLists.txt  main.cpp
examples/card_manager_example/: CMakeLists.txt  README.md  main.cpp
examples/desfire_auth_changekey/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  commands.txt  log.txt  main.cpp
examples/desfire_authenticate/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_change_file_settings/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_change_key_settings/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_clear_record_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_commit_transaction/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_create_application/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_create_backup_data_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_create_cyclic_record_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_create_linear_record_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_create_std_data_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_create_value_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_delete_application/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_delete_file/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_format_picc/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_free_memory/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_get_application_ids/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_get_card_uid/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_get_file_ids/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_get_file_settings/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_get_key_info/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_get_version/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_read_write_data/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_record_operations/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_scripted_demo/: README.md  STEPS.md  run_demo.ps1  test_des_changekey.ps1
examples/desfire_session_drift/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_set_configuration/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/desfire_value_operations/: CMakeLists.txt  README.md  build_example.bat  build_example.ps1  main.cpp
examples/pn532_command_test/: CMakeLists.txt  README.md  main.cpp
examples/serial_communication/: CMakeLists.txt  main.cpp
examples/timing_example/: CMakeLists.txt  main.cpp
(+118 files in other folders)
