# Examples for NfcCpp Library

# Example 1: Basic PN532 Usage
add_subdirectory(basic_pn532)

# Example 2: Serial Communication
add_subdirectory(serial_communication)

# Example 3: Card Detection
add_subdirectory(card_detection)

# Example 4: PN532 Command Test (Interactive)
add_subdirectory(pn532_command_test)

# Example 5: Cross-Platform Timing Utilities
add_subdirectory(timing_example)

# Example 6: CardManager Usage (Detection and Session Management)
add_subdirectory(card_manager_example)
