# Examples for NfcCpp Library

# Example 1: Basic PN532 Usage
add_subdirectory(basic_pn532)

# Example 2: Serial Communication
add_subdirectory(serial_communication)

# Example 3: Card Detection
add_subdirectory(card_detection)

# Example 4: PN532 Command Test (Interactive)
add_subdirectory(pn532_command_test)

# Example 5: Cross-Platform Timing Utilities
add_subdirectory(timing_example)

# Example 6: CardManager Usage (Detection and Session Management)
add_subdirectory(card_manager_example)

# Example 7: Basic Setup Example
add_subdirectory(basic_setup_example)

# Example 8: DESFire Authenticate + ChangeKey
add_subdirectory(desfire_auth_changekey)

# Example 9: DESFire Authenticate
add_subdirectory(desfire_authenticate)

# Example 10: DESFire CreateApplication
add_subdirectory(desfire_create_application)

# Example 11: DESFire DeleteApplication
add_subdirectory(desfire_delete_application)

# Example 12: DESFire GetVersion
add_subdirectory(desfire_get_version)

# Example 13: DESFire GetApplicationIDs
add_subdirectory(desfire_get_application_ids)

# Example 14: DESFire GetCardUID
add_subdirectory(desfire_get_card_uid)

# Example 15: DESFire GetKeySettings + GetKeyVersion
add_subdirectory(desfire_get_key_info)

# Example 16: DESFire CreateStdDataFile
add_subdirectory(desfire_create_std_data_file)

# Example 17: DESFire GetFileIDs
add_subdirectory(desfire_get_file_ids)

# Example 18: DESFire GetFileSettings
add_subdirectory(desfire_get_file_settings)

# Example 19: DESFire ReadData + WriteData
add_subdirectory(desfire_read_write_data)

# Example 20: DESFire ChangeKeySettings
add_subdirectory(desfire_change_key_settings)

# Example 21: DESFire SetConfiguration
add_subdirectory(desfire_set_configuration)

# Example 22: DESFire CreateBackupDataFile
add_subdirectory(desfire_create_backup_data_file)

# Example 23: DESFire CreateValueFile
add_subdirectory(desfire_create_value_file)

# Example 24: DESFire CreateLinearRecordFile
add_subdirectory(desfire_create_linear_record_file)

# Example 25: DESFire CreateCyclicRecordFile
add_subdirectory(desfire_create_cyclic_record_file)

# Example 26: DESFire Value Operations
add_subdirectory(desfire_value_operations)

# Example 27: DESFire CommitTransaction
add_subdirectory(desfire_commit_transaction)

# Example 28: DESFire ReadRecords + WriteRecord
add_subdirectory(desfire_record_operations)

# Example 29: DESFire DeleteFile
add_subdirectory(desfire_delete_file)

# Example 30: DESFire ClearRecordFile
add_subdirectory(desfire_clear_record_file)

# Example 31: DESFire FreeMemory
add_subdirectory(desfire_free_memory)

# Example 32: DESFire FormatPICC
add_subdirectory(desfire_format_picc)

# Example 33: DESFire ChangeFileSettings
add_subdirectory(desfire_change_file_settings)

# Example 34: DESFire Session Drift
add_subdirectory(desfire_session_drift)
